--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
-  <!--/**-->
-  <!--* @author Larson-->
-  <!--*/-->
+
+<!--/**-->
+<!--* @author Larson-->
+<!--*/-->
+
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="246.0" prefWidth="467.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<AnchorPane fx:id="anchor" prefHeight="246.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
-      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#viewTeam" prefHeight="25.0" prefWidth="108.0" text="View Team" />
-      <Label layoutX="183.0" layoutY="39.0" prefHeight="17.0" prefWidth="93.0" text="Team: " />
-      <Label layoutX="184.0" layoutY="71.0" prefHeight="17.0" prefWidth="93.0" text="Division: " />
-      <Label layoutX="185.0" layoutY="106.0" prefHeight="17.0" prefWidth="93.0" text="Overall Rank: " />
-      <Label layoutX="185.0" layoutY="140.0" prefHeight="17.0" prefWidth="93.0" text="Offensive Rank: " />
-      <Label layoutX="184.0" layoutY="177.0" prefHeight="17.0" prefWidth="93.0" text="Defensive Rank: " />
-      <Label fx:id="lblTeam" layoutX="332.0" layoutY="39.0" prefHeight="17.0" prefWidth="128.0" />
-      <Label fx:id="lblDivision" layoutX="332.0" layoutY="71.0" prefHeight="17.0" prefWidth="68.0" />
-      <Label fx:id="lblOverall" layoutX="332.0" layoutY="106.0" prefHeight="17.0" prefWidth="68.0" />
-      <Label fx:id="lblOffensive" layoutX="332.0" layoutY="140.0" prefHeight="17.0" prefWidth="68.0" />
-      <Label fx:id="lblDefensive" layoutX="332.0" layoutY="177.0" prefHeight="17.0" prefWidth="68.0" />
-      <Label layoutX="185.0" layoutY="212.0" prefHeight="17.0" prefWidth="93.0" text="Starter Rank: " />
-      <Label fx:id="lblStarter" layoutX="332.0" layoutY="212.0" prefHeight="17.0" prefWidth="68.0" />
+      <Button fx:id="viewTeam" layoutX="35.0" layoutY="20.0" mnemonicParsing="false" onAction="#viewTeam" prefHeight="25.0" prefWidth="108.0" text="View Team" />
+      <ComboBox fx:id="comboBox" layoutX="521.0" layoutY="20.0" onAction="#selectTeam" prefWidth="150.0" promptText="Select Team" />
+      <TableView fx:id="teamTable" layoutX="219.0" layoutY="90.0" prefHeight="150.0" prefWidth="452.0">
+        <columns>
+          <TableColumn fx:id="teamColumn" prefWidth="75.0" text="Team" />
+          <TableColumn fx:id="divisionColumn" prefWidth="75.0" text="Division" />
+            <TableColumn fx:id="overallColumn" prefWidth="75.0" text="Overall" />
+            <TableColumn fx:id="offenseColumn" prefWidth="75.0" text="Offense" />
+            <TableColumn fx:id="defenseColumn" prefWidth="75.0" text="Defense" />
+            <TableColumn fx:id="starterColumn" prefWidth="75.0" text="Starter" />
+        </columns>
+      </TableView>
+      <Button fx:id="updateRank" layoutX="35.0" layoutY="111.0" mnemonicParsing="false" onAction="#updateRank" prefHeight="25.0" prefWidth="108.0" text="Update Rank" />
    </children>
 </AnchorPane>
